# functional-SQL

./: .gitignore  README.md  README.rst  coverage.json  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  tox.ini
docs/: components.rst  conf.py  demo.rst  index.html  index.rst  notes.rst  spike_recursion.py  spike_sqlite.py
docs/_build/doctrees/: components.doctree  concept.doctree  demo.doctree  environment.pickle  funcsql.doctree  index.doctree  notes.doctree  tutorial.doctree
docs/_build/html/: .buildinfo  components.html  concept.html  demo.html  funcsql.html  genindex.html  index.html  notes.html  objects.inv  search.html  searchindex.js  tutorial.html
docs/_build/html/_sources/: components.rst.txt  concept.rst.txt  funcsql.rst.txt  index.rst.txt  notes.rst.txt  tutorial.rst.txt
src/: funcsql.py
tests/: demo_1.py  test_base.py  test_dml.py  test_queries.py  test_select.py  test_subqueries.py  test_values.py  test_with.py
